force-app/main/default/objects/SquareAPI__c/SquareAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SquareAPI</label>
</CustomObject>