force-app/main/default/objects/SquareAPI__c/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <label>EndpointURL</label>
    <type>Url</type>
</CustomField>