force-app/main/default/objects/SquareAPI__c/fields/LocationId__c.field-meta.xml
<CustomField>
    <fullName>LocationId__c</fullName>
    <label>LocationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>